--- a/tests/check.in
+++ b/tests/check.in
@@ -3,7 +3,13 @@ setup
 + k e8
 + p f7
 + Q h5
+= black
 done
-game human human
-move h5 g6
 move f7 f6
+move e8 f8
+move h5 f7
+move f8 e8
+move f8 e7
+move f8 g8
+move f8 g7
+move f8 f7
